Fix descender gap in header

--- a/qemutubes/css/layout.css
+++ b/qemutubes/css/layout.css
@@ -67,6 +67,7 @@ div#content {
     margin: 0px auto 0px auto;
     padding: 0px;
     height: auto;
+    display: block;
 }
 #header a {
     display: block;
